This is the first revision of the com.intalio.vmware package.